--- a/a_vagrant_machine/Vagrantfile
+++ b/a_vagrant_machine/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant::Config.run do |config|
-  config.vm.box = 'lucid32'
+  config.vm.box = 'precise64'
   config.vm.customize do |vm|
     vm.memory_size = 1024
   end
@@ -9,7 +9,8 @@ Vagrant::Config.run do |config|
     chef.log_level = :debug
     chef.add_recipe 'apt'
     chef.add_recipe 'git'
-    chef.add_recipe 'monit'
+    chef.add_recipe 'r'
+#    chef.add_recipe 'monit'
 
     chef.json.merge!({
                        :monit => {
